Push library fixes

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -7,13 +7,13 @@ find_package(CUDA QUIET REQUIRED)
 set(CUDA_HOST_COMPILER "c++")
 set(CUDA_NVCC_FLAGS "-std=c++11")
 
-set(CUDNN_INCLUDE_DIR /usr/local/cudnn/v4rc/include CACHE PATH
+set(CUDNN_INCLUDE_DIR /usr/local/cudnn/v4/include CACHE PATH
         "Path to cudnn header file")
 
 if(APPLE)
-    set(CUDNN_LIB_DIR /usr/local/cudnn/v4rc/lib CACHE PATH "Path to cudnn library")
+    set(CUDNN_LIB_DIR /usr/local/cudnn/v4/lib CACHE PATH "Path to cudnn library")
 elseif(UNIX)
-    set(CUDNN_LIB_DIR /usr/local/cudnn/v4rc/lib64 CACHE PATH "Path to cudnn library")
+    set(CUDNN_LIB_DIR /usr/local/cudnn/v4/lib64 CACHE PATH "Path to cudnn library")
 elseif(WIN32)
     # TODO
 endif()
